--- a/design/login.html
+++ b/design/login.html
@@ -41,129 +41,85 @@
 <output id="api-output"></output>
 
 <script>
-    document.getElementById('authorize').addEventListener('click', () => {
-        // Get client ID and redirect URI
-        const clientId = 'bca2a89f33694250b5b79633e3435a39';
-        const redirectUri = 'https://mart32jm.github.io/design/login.html';
-        // Generate a code verifier
-        const codeVerifier = generateRandomString(128);
-        // Generate code challenge
-        generateCodeChallenge(codeVerifier)
-            .then(codeChallenge => {
-                localStorage.setItem('code_verifier', codeVerifier);
-                const state = generateRandomString(16);
-                const scope = 'user-read-private user-read-email user-modify-playback-state';
-                const args = new URLSearchParams({
-                    response_type: 'code',
-                    client_id: clientId,
-                    scope: scope,
-                    redirect_uri: redirectUri,
-                    state: state,
-                    code_challenge_method: 'S256',
-                    code_challenge: codeChallenge
-                });
-                window.location = 'https://accounts.spotify.com/authorize?' + args;
-            });
-    });
+  document.getElementById('authorize').addEventListener('click', () => {
+      // Get client ID and redirect URI
+      const clientId = 'bca2a89f33694250b5b79633e3435a39';
+      const redirectUri = 'https://mart32jm.github.io/design/login.html';
+      // Generate a code verifier
+      const codeVerifier = generateRandomString(128);
+      // Generate code challenge
+      generateCodeChallenge(codeVerifier)
+          .then(codeChallenge => {
+              localStorage.setItem('code_verifier', codeVerifier);
+              const state = generateRandomString(16);
+              const scope = 'user-read-private user-read-email user-modify-playback-state';
+              const args = new URLSearchParams({
+                  response_type: 'code',
+                  client_id: clientId,
+                  scope: scope,
+                  redirect_uri: redirectUri,
+                  state: state,
+                  code_challenge_method: 'S256',
+                  code_challenge: codeChallenge
+              });
+              window.location = 'https://accounts.spotify.com/authorize?' + args;
+          });
+  });
 
-    // After authorization and token grabbing, automatically fetch and display user's profile
-    const token = localStorage.getItem('access_token');
-    if (token) {
-        getUserProfile(token)
-            .then((profile) => {
-                document.getElementById('profile-image').src = profile.images[profile.images.length - 1].url;
-                document.getElementById('profile-name').textContent = profile.display_name;
-                document.getElementById('profile-info').style.display = 'block';
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-            });
-    }
+  // After authorization and token grabbing, automatically fetch and display user's profile
+  const token = localStorage.getItem('access_token');
+  if (token) {
+      getUserProfile(token)
+          .then((profile) => {
+              document.getElementById('profile-image').src = profile.images[profile.images.length - 1].url;
+              document.getElementById('profile-name').textContent = profile.display_name;
+              document.getElementById('profile-info').style.display = 'block';
+          })
+          .catch((error) => {
+              console.error('Error:', error);
+          });
+  }
 
-    document.getElementById('reset-storage').addEventListener('click', () => {
-        localStorage.clear();
-        location.reload();
-    });
+  // Function to get user profile using the access token
+  async function getUserProfile(accessToken) {
+      const response = await fetch("https://api.spotify.com/v1/me", {
+          headers: {
+              'Authorization': 'Bearer ' + accessToken,
+          },
+      });
+      if (!response.ok) {
+          throw new Error('HTTP status ' + response.status);
+      }
+      return await response.json();
+  }
 
-    async function getUserProfile(accessToken) {
-        const response = await fetch("https://api.spotify.com/v1/me", {
-            headers: {
-                'Authorization': 'Bearer ' + accessToken,
-            },
-        });
-        if (!response.ok) {
-            throw new Error('HTTP status ' + response.status);
-        }
-        return await response.json();
-    }
+  // Function to generate a random string of specified length
+  function generateRandomString(length) {
+      let text = '';
+      const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+      for (let i = 0; i < length; i++) {
+          text += possible.charAt(Math.floor(Math.random() * possible.length));
+      }
+      return text;
+  }
 
-    function generateRandomString(length) {
-        let text = '';
-        const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-        for (let i = 0; i < length; i++) {
-            text += possible.charAt(Math.floor(Math.random() * possible.length));
-        }
-        return text;
-    }
+  // Function to generate code challenge for PKCE
+  function generateCodeChallenge(codeVerifier) {
+      function base64encode(string) {
+          return btoa(String.fromCharCode.apply(null, new Uint8Array(string)))
+              .replace(/\+/g, '-')
+              .replace(/\//g, '_')
+              .replace(/=+$/, '');
+      }
 
-    function generateCodeChallenge(codeVerifier) {
-        function base64encode(string) {
-            return btoa(String.fromCharCode.apply(null, new Uint8Array(string)))
-                .replace(/\+/g, '-')
-                .replace(/\//g, '_')
-                .replace(/=+$/, '');
-        }
+      const encoder = new TextEncoder();
+      const data = encoder.encode(codeVerifier);
+      const digest = window.crypto.subtle.digest('SHA-256', data);
 
-        const encoder = new TextEncoder();
-        const data = encoder.encode(codeVerifier);
-        const digest = window.crypto.subtle.digest('SHA-256', data);
+      return digest.then(d => base64encode(d));
+  }
 
-        return digest.then(d => base64encode(d));
-    }
-
-    // Remove query parameters from URL
-    window.history.replaceState({}, document.title, ".");
-
-    function getToken(clientId, redirectUri, code) {
-        const codeVerifier = localStorage.getItem('code_verifier');
-        const body = new URLSearchParams({
-            grant_type: 'authorization_code',
-            code: code,
-            redirect_uri: redirectUri,
-            client_id: clientId,
-            code_verifier: codeVerifier
-        });
-
-        return fetch('https://accounts.spotify.com/api/token', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/x-www-form-urlencoded'
-            },
-            body: body
-        })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('HTTP status ' + response.status);
-                }
-                return response.json();
-            })
-            .then(data => {
-                localStorage.setItem('access_token', data.access_token);
-                document.getElementById('get-token').style.display = 'none';
-                // Reload the page to update the token
-                window.location.reload();
-                return data.access_token;
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-    }
-    
-    // Automatically print the icon below the authorize button
-    const iconUrl = 'https://example.com/icon.png'; // Replace with the actual URL of the icon
-    const icon = document.createElement('img');
-    icon.src = iconUrl;
-    document.body.appendChild(icon);
 </script>
+
 </body>
 </html>
