--- a/design/login.html
+++ b/design/login.html
@@ -18,8 +18,21 @@
 
     <main>
         <section class="card">
+            <h2 id="registering-your-app-with-spotify">1. Registering Your App with Spotify</h2>
+            <p>Before you can start using the Spotify API, you need to register your app on the <a href="https://developer.spotify.com/dashboard">Spotify Developer Dashboard.</a></p>
+            <p>Once you've registered your app, you'll receive a <code>client_id</code> that you'll need to use to authenticate your app. (Don't worry about the <code>client_secret</code>, this is used for other authorization flows.)</p>
             <p>Paste your Client ID here: <input id="paste-client-id" data-sync="client_id" type="text" size="40" placeholder="Client ID"> <span class="note">(we won't steal it, promise!)</span></p>
+
+            <h3 id="redirect-uri">Redirect URI</h3>
+            <p>You will also need to register the <code>redirect_uri</code> for your app.</p>
+            <p>Basically, the user will click a link on your site that will redirect them to Spotify so that they can log in and authorize your app. Once they've done so, Spotify will send the user back to your site. The <code>redirect_uri</code> tells Spotify where they should send them. For security reasons, Spotify requires that the <code>redirect_uri</code> be an <a href="https://en.wikipedia.org/wiki/Uniform_Resource_Identifier">absolute URI</a> and that it be registered with your app.</p>
+            <p>Go to the <a href="https://developer.spotify.com/dashboard">Developer Dashboard</a> and add a redirect URI. You should use something like <code>http://localhost:8080/index.html</code> if you're running on a local server. Once your app is deployed, use the full URL of your deployed page. <span class="note">(Spotify treats localhost and 127.0.0.1 as different, so make sure you specify the right one - or both!)</span></p>
+        </section>
         <section class="card">
+            <h2 id="getting-an-authorization-code">2. Getting an Authorization Code</h2>
+            <p>The first thing your app needs to do is request authorization from a Spotify user. This will send the user to Spotify, have them log in, and then redirect back to your app with an <em>authorization code</em> in the query string of the URL.</p>
+
+            <p>You will need two things to request an auth code:</p>
             <ul>
                 <li>
                     <code>client_id</code>: <input id="login-client-id" data-sync="client_id" type="text" size="40" placeholder="Client ID">
@@ -35,13 +48,24 @@
                 <li><code>code_verifier</code>: <code id="code-verifier" class="graybg"></code></li>
                 <li><code>code_challenge</code>: <code id="code-challenge" class="graybg"></code></li>
             </ul>
+
+            <p>You should generate your own values programatically each time you make a new authorization request. You will need to store the <code>code_verifier</code> in <code>localStorage</code>, since the page will be reloaded after Spotify redirects the user. Read <a href="#code-verifier-and-code-challenge">the section below</a> to see why this is important!</p>
+
+            <p>Here is an example of making the authorization request via JavaScript (updated with your request values):</p>
+
             <!-- HTML generated using hilite.me -->
 
             <h3 id="try-login">Try It Yourself!</h3>
+            <p>If you've set the <code>client_id</code> and the <code>redirect_uri</code> above, you can click this button to request an authorization code:</p>
             <button id="login-button" class="primary" type="button">Login with Spotify</button>
             <p>Your auth code is: <code id="auth-code" class="graybg"></code></p>
         </section>
         <section class="card">
+            <h2 id="exchanging-the-auth-code">3. Exchanging the Authorization Code for an Access Token</h2>
+            <p>Once you have the authorization code, you can exchange it for an access token. This token is what you will use to make requests to the Spotify API. If you have successfully requested an auth code, it should be present in the URL's <em>query string</em>.</p>
+
+            <p>You can get the auth code from the URL like so, using URLSearchParams to parse the query string (<a href="https://www.jackfranklin.co.uk/blog/url-search-params/">read more!</a>):</p>
+
             <!-- HTML generated using hilite.me -->
             <div class="code-display">
                 <pre style="margin: 0; line-height: 125%"><span style="color: #008000; font-weight: bold">const</span> urlParams <span style="color: #666666">=</span> <span style="color: #008000; font-weight: bold">new</span> URLSearchParams(<span style="color: #008000">window</span>.location.search);
@@ -53,6 +77,30 @@
             <p>Here is an example of a request that exchanges the auth code for an access token:</p>
 
             <!-- HTML generated using hilite.me -->
+            <div class="code-display">
+                <pre style="margin: 0; line-height: 125%"><span style="color: #408080; font-style: italic">// codeVerifier MUST be the same as the one used to make the code challenge for the auth request</span>
+<span style="color: #008000; font-weight: bold">const</span> codeVerifier <span style="color: #666666">=</span> localStorage.getItem(<span style="color: #BA2121">&#39;code_verifier&#39;</span>);
+
+<span style="color: #008000; font-weight: bold">const</span> payload <span style="color: #666666">=</span> {
+    method<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;POST&#39;</span>,
+    headers<span style="color: #666666">:</span> {
+        <span style="color: #BA2121">&#39;Content-Type&#39;</span><span style="color: #666666">:</span> <span style="color: #BA2121">&#39;application/x-www-form-urlencoded&#39;</span>,
+    },
+    body<span style="color: #666666">:</span> <span style="color: #008000; font-weight: bold">new</span> URLSearchParams({
+        grant_type<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;authorization_code&#39;</span>,
+        client_id<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;<span data-sync="client_id"></span>&#39;</span>,
+        redirect_uri<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;<span data-sync="redirect_uri"></span>&#39;</span>,
+        code_verifier<span style="color: #666666">:</span> codeVerifier,
+        code<span style="color: #666666">:</span> authCode, <span style="color: #408080; font-style: italic">// From the URL</span>
+    }),
+}
+
+<span style="color: #008000; font-weight: bold">const</span> response <span style="color: #666666">=</span> await fetch(<span style="color: #BA2121">&#39;https://accounts.spotify.com/api/token&#39;</span>, payload);
+<span style="color: #008000; font-weight: bold">const</span> data <span style="color: #666666">=</span> await response.json();
+
+<span style="color: #008000; font-weight: bold">const</span> accessToken <span style="color: #666666">=</span> data.access_token;
+</pre>
+            </div>
 
             <h3 id="try-token">Try It Yourself!</h3>
             <p>If you've successfully obtained an auth code, you can click this button to exchange it for an access token:</p>
@@ -61,6 +109,7 @@
             <p class="note">This token will last for an hour, after which you will need to request a new one. There is a mechanism to <a href="https://developer.spotify.com/documentation/web-api/tutorials/refreshing-tokens">refresh the token</a>, so the user doesn't need to log in again.</p>
 
         </section>
+        
 
             <h3 id="try-api">Try It Yourself!</h3>
             <p>If you've successfully obtained an access token, you can click this button to get the current user's profile:</p>
