--- a/design/login.html
+++ b/design/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -72,7 +73,35 @@
             <p>Here is an example of making the authorization request via JavaScript (updated with your request values):</p>
 
             <!-- HTML generated using hilite.me -->
+            <div class="code-display">
+                <pre style="margin: 0; line-height: 125%"><span style="color: #008000">window</span>.localStorage.setItem(<span style="color: #BA2121">&#39;code_verifier&#39;</span>, codeVerifier); <span style="color: #408080; font-style: italic">// Save the code verifier for later</span>
 
+<span style="color: #008000; font-weight: bold">const</span> clientId <span style="color: #666666">=</span> <span style="color: #BA2121">&#39;<span data-sync="client_id"></span>&#39;</span>;
+<span style="color: #008000; font-weight: bold">const</span> redirectUri <span style="color: #666666">=</span> <span style="color: #BA2121">&#39;<span data-sync="redirect_uri"></span>&#39;</span>;
+
+<span style="color: #008000; font-weight: bold">const</span> scope <span style="color: #666666">=</span> <span style="color: #BA2121">&#39;user-read-private user-read-email&#39;</span>; <span style="color: #408080; font-style: italic">// Specifies what user data your app can access!</span>
+<span style="color: #008000; font-weight: bold">const</span> authUrl <span style="color: #666666">=</span> <span style="color: #008000; font-weight: bold">new</span> URL(<span style="color: #BA2121">&quot;https://accounts.spotify.com/authorize&quot;</span>)
+
+<span style="color: #008000; font-weight: bold">const</span> params <span style="color: #666666">=</span>  {
+    response_type<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;code&#39;</span>,
+    client_id<span style="color: #666666">:</span> clientId,
+    scope<span style="color: #666666">:</span> scope,
+    code_challenge_method<span style="color: #666666">:</span> <span style="color: #BA2121">&#39;S256&#39;</span>,
+    code_challenge<span style="color: #666666">:</span> codeChallenge, <span style="color: #408080; font-style: italic">// The hashed code verifier</span>
+    redirect_uri<span style="color: #666666">:</span> redirectUri,
+}
+
+authUrl.search <span style="color: #666666">=</span> <span style="color: #008000; font-weight: bold">new</span> URLSearchParams(params).toString();
+<span style="color: #008000">window</span>.location.href <span style="color: #666666">=</span> authUrl.toString(); <span style="color: #408080; font-style: italic">// Redirect the user</span>
+</pre>
+            </div>
+
+            <aside>
+                <h4 id="code-verifier-and-code-challenge">Learn More: Code Verifier and Code Challenge</h4>
+                <p>When you send the authorization request, you must provide a "code challenge" to the server. This code challenge is a one-way hash of a random string known as the "code verifier".</p>
+                <p>You first give the <em>code challenge</em> when sending the user to Spotify to login. The server will return an <em>authorization code</em> back to your app <span class="note">(which could be stolen by an attacker, since it is given in the URL)</span>.</p>
+                <p>Then you send the <em>authorization code</em> to Spotify in a <code>POST</code> request. But this time, you include the original <em>code verifier</em> string! The server can re-hash the <em>code verifier</em> and make sure it matches the <em>code challenge</em> you sent earlier. This way, it's able to ensure that you are the same one who sent the original request. This is the basis for PKCE. You can read more about it <a href="https://pazel.dev/teach-me-pkce-proof-key-for-code-exchange-in-5-minutes">here</a>.</p>
+            </aside>
 
             <h3 id="try-login">Try It Yourself!</h3>
             <p>If you've set the <code>client_id</code> and the <code>redirect_uri</code> above, you can click this button to request an authorization code:</p>
@@ -92,6 +121,17 @@
 </pre>
             </div>
 
+            <p>Now you can exchange this code for an access token. This token is your "golden ticket 🎫" to the <a href="https://developer.spotify.com/documentation/web-api">Spotify Web API</a>. We will need to make another request to the Spotify server, this time a <code>POST</code> request.</p>
+
+            <h3 id="making-the-token-request">Making the Request</h3>
+            <p>There are a few body parameters, which need to be in the <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST#example"><code>x-www-form-urlencoded</code></a> format. These are:</p>
+            <ul>
+                <li><code>grant_type</code>: <code class="graybg">"authorization_code"</code> <span class="note">(a string literal)</span></li>
+                <li><code>client_id</code>: <code data-sync="client_id" class="graybg"></code> <span class="note">(same as before)</span></li>
+                <li><code>redirect_uri</code>: <code data-sync="redirect_uri" class="graybg"></code> <span class="note">(same one used to request the auth code)</span></li>
+                <li><code>code_verifier</code>: <code id="code-verifier-body" class="graybg"></code> <span class="note">(value from <code>localStorage</code>)</span></li>
+                <li><code>code</code>: <code id="auth-code-body" class="graybg"></code> <span class="note">(from the URL)</span></li>
+            </ul>
 
             <p>Here is an example of a request that exchanges the auth code for an access token:</p>
 
