--- a/design/login.html
+++ b/design/login.html
@@ -20,6 +20,9 @@
     <main>
 
         <section class="card">
+            <p>Paste your Client ID here: <input id="paste-client-id" data-sync="client_id" type="text" size="40" placeholder="Client ID"> <span class="note">(we won't steal it, promise!)</span></p>
+
+        <section class="card">
             <h2 id="getting-an-authorization-code">2. Getting an Authorization Code</h2>
             <p>The first thing your app needs to do is request authorization from a Spotify user. This will send the user to Spotify, have them log in, and then redirect back to your app with an <em>authorization code</em> in the query string of the URL.</p>
 
