--- a/design/login.html
+++ b/design/login.html
@@ -44,7 +44,8 @@
             <p>Here are the values we've generated for this tutorial: <button id="generate-button" type="button" class="small">Regenerate</button></p>
 
             <ul>
-      
+                <li><code>code_verifier</code>: <code id="code-verifier" class="graybg"></code></li>
+                <li><code>code_challenge</code>: <code id="code-challenge" class="graybg"></code></li>
             </ul>
 
             <h3 id="try-login">Try It Yourself!</h3>
@@ -53,6 +54,20 @@
             <p>Your auth code is: <code id="auth-code" class="graybg"></code></p>
         </section>
         <section class="card">
+
+            <h3 id="making-the-token-request">Making the Request</h3>
+            <p>There are a few body parameters, which need to be in the <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST#example"><code>x-www-form-urlencoded</code></a> format. These are:</p>
+            <ul>
+                <li><code>grant_type</code>: <code class="graybg">"authorization_code"</code> <span class="note">(a string literal)</span></li>
+                <li><code>client_id</code>: <code data-sync="client_id" class="graybg"></code> <span class="note">(same as before)</span></li>
+                <li><code>redirect_uri</code>: <code data-sync="redirect_uri" class="graybg"></code> <span class="note">(same one used to request the auth code)</span></li>
+                <li><code>code_verifier</code>: <code id="code-verifier-body" class="graybg"></code> <span class="note">(value from <code>localStorage</code>)</span></li>
+                <li><code>code</code>: <code id="auth-code-body" class="graybg"></code> <span class="note">(from the URL)</span></li>
+            </ul>
+
+            <p>Here is an example of a request that exchanges the auth code for an access token:</p>
+
+            <!-- HTML generated using hilite.me -->
 
             <h3 id="try-token">Try It Yourself!</h3>
             <p>If you've successfully obtained an auth code, you can click this button to exchange it for an access token:</p>
