--- a/design/login.html
+++ b/design/login.html
@@ -55,7 +55,18 @@
         </section>
         <section class="card">
 
-           
+            <h3 id="making-the-token-request">Making the Request</h3>
+            <p>There are a few body parameters, which need to be in the <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST#example"><code>x-www-form-urlencoded</code></a> format. These are:</p>
+            <ul>
+                <li><code>grant_type</code>: <code class="graybg">"authorization_code"</code> <span class="note">(a string literal)</span></li>
+                <li><code>client_id</code>: <code data-sync="client_id" class="graybg"></code> <span class="note">(same as before)</span></li>
+                <li><code>redirect_uri</code>: <code data-sync="redirect_uri" class="graybg"></code> <span class="note">(same one used to request the auth code)</span></li>
+                <li><code>code_verifier</code>: <code id="code-verifier-body" class="graybg"></code> <span class="note">(value from <code>localStorage</code>)</span></li>
+                <li><code>code</code>: <code id="auth-code-body" class="graybg"></code> <span class="note">(from the URL)</span></li>
+            </ul>
+
+            <p>Here is an example of a request that exchanges the auth code for an access token:</p>
+
             <!-- HTML generated using hilite.me -->
 
             <h3 id="try-token">Try It Yourself!</h3>
@@ -69,28 +80,8 @@
             <h2 id="making-requests-to-the-spotify-api">4. Making Requests to the Spotify API</h2>
             <p>Now that you have an access token, you can make requests to the <a href="https://developer.spotify.com/documentation/web-api">Spotify Web API</a>. For this tutorial, we will get the current user's profile and display their name and profile image. You can read the documentation for this endpoint <a href="https://developer.spotify.com/documentation/web-api/reference/get-current-users-profile">here</a>.</p>
 
-            <aside>
-                <h4 id="additional-scopes">Additional Scopes?</h4>
-                <p>Some API endpoints require specific "scopes". If you need additional access to user data beyond what is given by the <code>user-read-private user-read-email</code> scope, you can specify <a href="https://developer.spotify.com/documentation/web-api/concepts/scopes">additional scopes</a> when making the <a href="#making-the-request">auth code request</a>.</p>
-            </aside>
-
             <p>The base URL for the Spotify API is <code>https://api.spotify.com/v1</code>, and this specific endpoint has the path <code>/me</code>. Thus, the full URL is <code>https://api.spotify.com/v1/me</code>. You can read more about Spotify API calls <a href="https://developer.spotify.com/documentation/web-api/concepts/api-calls">here</a>.</p>
             <p>To send a request to this (or any other) API endpoint, we can use <code>fetch()</code> with the full URL, and additionally specify any parameters the endpoint is expecting. All your requests must include the <a href="https://developer.spotify.com/documentation/web-api/concepts/access-token">access token</a> in the <code>Authorization</code> header, with the value: <code>Bearer [YOUR_ACCESS_TOKEN_HERE]</code>.</p>
-
-            <h3 id="example-api-request">Example Request</h3>
-            <p>Here is an example of how you can get the current user's profile:</p>
-
-            <!-- HTML generated using hilite.me -->
-            <div class="code-display">
-                <pre style="margin: 0; line-height: 125%"><span style="color: #008000; font-weight: bold">const</span> response <span style="color: #666666">=</span> await fetch(<span style="color: #BA2121">&quot;https://api.spotify.com/v1/me&quot;</span>, {
-    headers<span style="color: #666666">:</span> {
-        <span style="color: #BA2121">&#39;Authorization&#39;</span><span style="color: #666666">:</span> <span style="color: #BA2121">&#39;Bearer &#39;</span> <span style="color: #666666">+</span> accessToken,
-    },
-});
-
-<span style="color: #008000; font-weight: bold">const</span> data <span style="color: #666666">=</span> await response.json();
-</pre>
-            </div>
 
             <h3 id="try-api">Try It Yourself!</h3>
             <p>If you've successfully obtained an access token, you can click this button to get the current user's profile:</p>
