--- a/design/login.html
+++ b/design/login.html
@@ -20,7 +20,7 @@
     <main>
         <section class="card">
   
-            <p>Paste your Client ID here: <input id="paste-client-id" data-sync="client_id" type="text" size="40" placeholder="Client ID"> <span class="note">(we won't steal it, promise!)</span></p>
+            <!---- <p>Paste your Client ID here: <input id="paste-client-id" data-sync="client_id" type="text" size="40" placeholder="Client ID"> <span class="note">(we won't steal it, promise!)</span></p> -->
 
             <h3 id="redirect-uri">Redirect URI</h3>
             
@@ -77,6 +77,7 @@
 
         </section>
         <section class="card">
+
             <h3 id="try-api">Try It Yourself!</h3>
             <p>If you've successfully obtained an access token, you can click this button to get the current user's profile:</p>
             <button id="profile-button" class="primary" type="button">Get User Profile</button>
