--- a/design/login.html
+++ b/design/login.html
@@ -20,7 +20,8 @@
     <main>
         <section class="card">
   
-            <!---- <p>Paste your Client ID here: <input id="paste-client-id" data-sync="client_id" type="text" size="40" placeholder="Client ID"> <span class="note">(we won't steal it, promise!)</span></p> -->
+          <p>Client ID: <input id="paste-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></p>
+
 
             <h3 id="redirect-uri">Redirect URI</h3>
             
