--- a/design/login.html
+++ b/design/login.html
@@ -20,7 +20,7 @@
     <main>
         <section class="card">
   
-          <p>Client ID: <input id="paste-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></p>
+          <p><input id="paste-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></p>
 
 
             <h3 id="redirect-uri">Redirect URI</h3>
