--- a/design/login.html
+++ b/design/login.html
@@ -22,22 +22,15 @@
   
           <p><input id="paste-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></p>
 
-
-            <h3 id="redirect-uri">Redirect URI</h3>
             
         </section>
         <section class="card">
             <h2 id="getting-an-authorization-code">2. Getting an Authorization Code</h2>
 
             <p>You will need two things to request an auth code:</p>
-            <ul>
-                <li>
-                    <code>client_id</code>: <input id="login-client-id" data-sync="client_id" type="text" size="40" placeholder="Client ID">
-                </li>
-                <li>
-                    <code>redirect_uri</code>: <input id="login-redirect-uri" data-sync="redirect_uri" type="text" size="40" placeholder="Redirect URI"> <span class="note">(This should be a page that is prepared to handle the returned auth code)</span>
-                </li>
-            </ul>
+              <code>client_id</code>: <input id="login-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></li>
+              <code>redirect_uri</code>: <input id="login-redirect-uri" data-sync="redirect_uri" type="hidden" value="https://mart32jm.github.io/design/login.html"></li>
+              
 
             <h3 id="making-the-request">Making the Request</h3>
             <p></p>
