--- a/design/login.html
+++ b/design/login.html
@@ -25,11 +25,8 @@
             
         </section>
         <section class="card">
-            <h2 id="getting-an-authorization-code">2. Getting an Authorization Code</h2>
-
-            <p>You will need two things to request an auth code:</p>
-              <code>client_id</code>: <input id="login-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></li>
-              <code>redirect_uri</code>: <input id="login-redirect-uri" data-sync="redirect_uri" type="hidden" value="https://mart32jm.github.io/design/login.html"></li>
+              <code></code>: <input id="login-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></li>
+              <code></code>: <input id="login-redirect-uri" data-sync="redirect_uri" type="hidden" value="https://mart32jm.github.io/design/login.html"></li>
               
 
             <h3 id="making-the-request">Making the Request</h3>
