--- a/design/login.html
+++ b/design/login.html
@@ -28,9 +28,14 @@
             <h2 id="getting-an-authorization-code">2. Getting an Authorization Code</h2>
 
             <p>You will need two things to request an auth code:</p>
-              <input id="login-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></li>
-              <input id="login-redirect-uri" data-sync="redirect_uri" type="hidden" value="https://mart32jm.github.io/design/login.html"></li>
-              
+            <ul>
+                <li>
+                  <code>client_id</code>: <input id="login-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></li>
+                </li>
+                <li>
+                    <code>redirect_uri</code>: <input id="login-redirect-uri" data-sync="redirect_uri" type="text" size="40" placeholder="Redirect URI"> <span class="note">(This should be a page that is prepared to handle the returned auth code)</span>
+                </li>
+            </ul>
 
             <h3 id="making-the-request">Making the Request</h3>
             <p></p>
