--- a/design/login.html
+++ b/design/login.html
@@ -30,7 +30,7 @@
             <p>You will need two things to request an auth code:</p>
             <ul>
                 <li>
-                    <li><code>client_id</code>: <input id="login-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></li>
+                    <code>client_id</code>: <input id="login-client-id" data-sync="client_id" type="text" size="40" placeholder="Client ID">
                 </li>
                 <li>
                     <code>redirect_uri</code>: <input id="login-redirect-uri" data-sync="redirect_uri" type="text" size="40" placeholder="Redirect URI"> <span class="note">(This should be a page that is prepared to handle the returned auth code)</span>
