--- a/design/login.html
+++ b/design/login.html
@@ -22,6 +22,8 @@
   
           <p><input id="paste-client-id" data-sync="client_id" type="hidden" value="bca2a89f33694250b5b79633e3435a39"></p>
 
+
+            <h3 id="redirect-uri">Redirect URI</h3>
             
         </section>
         <section class="card">
