--- a/design/login.html
+++ b/design/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,18 +15,15 @@
             <a href="https://developer.spotify.com/documentation/web-api/">API Reference</a>
         </nav>
     </header>
-
     <main>
         <section class="card">
   
             <p>Paste your Client ID here: <input id="paste-client-id" data-sync="client_id" type="text" size="40" placeholder="Client ID"> <span class="note">(we won't steal it, promise!)</span></p>
-
             <h3 id="redirect-uri">Redirect URI</h3>
             
         </section>
         <section class="card">
             <h2 id="getting-an-authorization-code">2. Getting an Authorization Code</h2>
-
             <p>You will need two things to request an auth code:</p>
             <ul>
                 <li>
@@ -37,17 +33,12 @@
                     <code>redirect_uri</code>: <input id="login-redirect-uri" data-sync="redirect_uri" type="text" size="40" placeholder="Redirect URI"> <span class="note">(This should be a page that is prepared to handle the returned auth code)</span>
                 </li>
             </ul>
-
             <h3 id="making-the-request">Making the Request</h3>
             <p></p>
-
             <p>Here are the values we've generated for this tutorial: <button id="generate-button" type="button" class="small">Regenerate</button></p>
-
             <ul>
-                <li><code>code_verifier</code>: <code id="code-verifier" class="graybg"></code></li>
-                <li><code>code_challenge</code>: <code id="code-challenge" class="graybg"></code></li>
+      
             </ul>
-
             <h3 id="try-login">Try It Yourself!</h3>
             <p>If you've set the <code>client_id</code> and the <code>redirect_uri</code> above, you can click this button to request an authorization code:</p>
             <button id="login-button" class="primary" type="button">Login with Spotify</button>
@@ -55,61 +46,43 @@
         </section>
         <section class="card">
 
-            <h3 id="making-the-token-request">Making the Request</h3>
-            <p>There are a few body parameters, which need to be in the <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST#example"><code>x-www-form-urlencoded</code></a> format. These are:</p>
-            <ul>
-                <li><code>grant_type</code>: <code class="graybg">"authorization_code"</code> <span class="note">(a string literal)</span></li>
-                <li><code>client_id</code>: <code data-sync="client_id" class="graybg"></code> <span class="note">(same as before)</span></li>
-                <li><code>redirect_uri</code>: <code data-sync="redirect_uri" class="graybg"></code> <span class="note">(same one used to request the auth code)</span></li>
-                <li><code>code_verifier</code>: <code id="code-verifier-body" class="graybg"></code> <span class="note">(value from <code>localStorage</code>)</span></li>
-                <li><code>code</code>: <code id="auth-code-body" class="graybg"></code> <span class="note">(from the URL)</span></li>
-            </ul>
-
-            <p>Here is an example of a request that exchanges the auth code for an access token:</p>
-
-            <!-- HTML generated using hilite.me -->
-
-            <h3 id="try-token">Try It Yourself!</h3>
-            <p>If you've successfully obtained an auth code, you can click this button to exchange it for an access token:</p>
-            <button id="token-button" class="primary" type="button">Get Access Token</button>
-            <p>Your access token is: <code id="access-token" class="graybg"></code></p>
-            <p class="note">This token will last for an hour, after which you will need to request a new one. There is a mechanism to <a href="https://developer.spotify.com/documentation/web-api/tutorials/refreshing-tokens">refresh the token</a>, so the user doesn't need to log in again.</p>
-
-        </section>
-        <section class="card">
-            <h2 id="making-requests-to-the-spotify-api">4. Making Requests to the Spotify API</h2>
-            <p>Now that you have an access token, you can make requests to the <a href="https://developer.spotify.com/documentation/web-api">Spotify Web API</a>. For this tutorial, we will get the current user's profile and display their name and profile image. You can read the documentation for this endpoint <a href="https://developer.spotify.com/documentation/web-api/reference/get-current-users-profile">here</a>.</p>
-
-            <p>The base URL for the Spotify API is <code>https://api.spotify.com/v1</code>, and this specific endpoint has the path <code>/me</code>. Thus, the full URL is <code>https://api.spotify.com/v1/me</code>. You can read more about Spotify API calls <a href="https://developer.spotify.com/documentation/web-api/concepts/api-calls">here</a>.</p>
-            <p>To send a request to this (or any other) API endpoint, we can use <code>fetch()</code> with the full URL, and additionally specify any parameters the endpoint is expecting. All your requests must include the <a href="https://developer.spotify.com/documentation/web-api/concepts/access-token">access token</a> in the <code>Authorization</code> header, with the value: <code>Bearer [YOUR_ACCESS_TOKEN_HERE]</code>.</p>
-
-            <h3 id="example-api-request">Example Request</h3>
-            <p>Here is an example of how you can get the current user's profile:</p>
-
-            <!-- HTML generated using hilite.me -->
-            <div class="code-display">
-                <pre style="margin: 0; line-height: 125%"><span style="color: #008000; font-weight: bold">const</span> response <span style="color: #666666">=</span> await fetch(<span style="color: #BA2121">&quot;https://api.spotify.com/v1/me&quot;</span>, {
-    headers<span style="color: #666666">:</span> {
-        <span style="color: #BA2121">&#39;Authorization&#39;</span><span style="color: #666666">:</span> <span style="color: #BA2121">&#39;Bearer &#39;</span> <span style="color: #666666">+</span> accessToken,
-    },
+        <h3 id="try-token">Try It Yourself!</h3>
+        <p>If you've successfully obtained an auth code, you can click this button to exchange it for an access token:</p>
+        <button id="token-button" class="primary" type="button">Get Access Token</button>
+        <p>Your access token is: <code id="access-token" class="graybg"></code></p>
+        <p class="note">This token will last for an hour, after which you will need to request a new one. There is a mechanism to <a href="https://developer.spotify.com/documentation/web-api/tutorials/refreshing-tokens">refresh the token</a>, so the user doesn't need to log in again.</p>
+    </section>
+    <section class="card">
+        <h2 id="making-requests-to-the-spotify-api">4. Making Requests to the Spotify API</h2>
+        <p>Now that you have an access token, you can make requests to the <a href="https://developer.spotify.com/documentation/web-api">Spotify Web API</a>. For this tutorial, we will get the current user's profile and display their name and profile image. You can read the documentation for this endpoint <a href="https://developer.spotify.com/documentation/web-api/reference/get-current-users-profile">here</a>.</p>
+        <aside>
+            <h4 id="additional-scopes">Additional Scopes?</h4>
+            <p>Some API endpoints require specific "scopes". If you need additional access to user data beyond what is given by the <code>user-read-private user-read-email</code> scope, you can specify <a href="https://developer.spotify.com/documentation/web-api/concepts/scopes">additional scopes</a> when making the <a href="#making-the-request">auth code request</a>.</p>
+        </aside>
+        <p>The base URL for the Spotify API is <code>https://api.spotify.com/v1</code>, and this specific endpoint has the path <code>/me</code>. Thus, the full URL is <code>https://api.spotify.com/v1/me</code>. You can read more about Spotify API calls <a href="https://developer.spotify.com/documentation/web-api/concepts/api-calls">here</a>.</p>
+        <p>To send a request to this (or any other) API endpoint, we can use <code>fetch()</code> with the full URL, and additionally specify any parameters the endpoint is expecting. All your requests must include the <a href="https://developer.spotify.com/documentation/web-api/concepts/access-token">access token</a> in the <code>Authorization</code> header, with the value: <code>Bearer [YOUR_ACCESS_TOKEN_HERE]</code>.</p>
+        <h3 id="example-api-request">Example Request</h3>
+        <p>Here is an example of how you can get the current user's profile:</p>
+        <!-- HTML generated using hilite.me -->
+        <div class="code-display">
+            <pre style="margin: 0; line-height: 125%"><span style="color: #008000; font-weight: bold">const</span> response <span style="color: #666666">=</span> await fetch(<span style="color: #BA2121">&quot;https://api.spotify.com/v1/me&quot;</span>, {
+headers<span style="color: #666666">:</span> {
+    <span style="color: #BA2121">&#39;Authorization&#39;</span><span style="color: #666666">:</span> <span style="color: #BA2121">&#39;Bearer &#39;</span> <span style="color: #666666">+</span> accessToken,
+},
 });
-
 <span style="color: #008000; font-weight: bold">const</span> data <span style="color: #666666">=</span> await response.json();
 </pre>
-            </div>
-
-            <h3 id="try-api">Try It Yourself!</h3>
-            <p>If you've successfully obtained an access token, you can click this button to get the current user's profile:</p>
-            <button id="profile-button" class="primary" type="button">Get User Profile</button>
-            <p>Your user profile is: <code id="profile-name" class="graybg"></code></p>
-            <img id="profile-image" src="https://placehold.co/300x300" alt="User profile">
-        </section>
-    </main>
-
-    <footer>
-        <p>Created with ❤️ for CS 343: Application Development, James Madison University.</p>
-    </footer>
-
-    <script src="../scripts/script.js"></script>
+        </div>
+        <h3 id="try-api">Try It Yourself!</h3>
+        <p>If you've successfully obtained an access token, you can click this button to get the current user's profile:</p>
+        <button id="profile-button" class="primary" type="button">Get User Profile</button>
+        <p>Your user profile is: <code id="profile-name" class="graybg"></code></p>
+        <img id="profile-image" src="https://placehold.co/300x300" alt="User profile">
+    </section>
+</main>
+<footer>
+    <p>Created with ❤️ for CS 343: Application Development, James Madison University.</p>
+</footer>
+<script src="../scripts/script.js"></script>
 </body>
 </html>
