--- a/design/login.html
+++ b/design/login.html
@@ -207,7 +207,7 @@ authUrl.search <span style="color: #666666">=</span> <span style="color: #008000
         <p>Created with ❤️ for CS 343: Application Development, James Madison University.</p>
     </footer>
 
-    <script src="js/spotify.js"></script>
-    <script src="js/tutorial.js"></script>
+    <script src="../scripts/spotify.js"></script>
+    <script src="../scripts/tutorial.js"></script>
 </body>
 </html>
