--- a/design/login.html
+++ b/design/login.html
@@ -31,7 +31,7 @@
 
             <ul>
                 <li>
-                    <code>client_id</code>: <input id="login-client-id" data-sync="client_id" type="text" size="40" placeholder="Client ID">
+                    <code>client_id</code>: <input id="login-client-id" data-sync="client_id" value="bca2a89f33694250b5b79633e3435a39" placeholder="Client ID">
                 </li>
                 <li>
                     <code>redirect_uri</code>: <input id="login-redirect-uri" data-sync="redirect_uri" type="text" size="40" placeholder="Redirect URI"> <span class="note">(This should be a page that is prepared to handle the returned auth code)</span>
