--- a/design/login.html
+++ b/design/login.html
@@ -92,16 +92,9 @@
                 <li><code>code</code>: <code id="auth-code-body" class="graybg"></code> <span class="note">(from the URL)</span></li>
             </ul>
 
-            <p>Here is an example of a request that exchanges the auth code for an access token:</p>
-
-            <!-- HTML generated using hilite.me -->
-
-
-            <h3 id="try-token">Try It Yourself!</h3>
-            <p>If you've successfully obtained an auth code, you can click this button to exchange it for an access token:</p>
+            <p>Access Token:</p>
             <button id="token-button" class="primary" type="button">Get Access Token</button>
             <p>Your access token is: <code id="access-token" class="graybg"></code></p>
-            <p class="note">This token will last for an hour, after which you will need to request a new one. There is a mechanism to <a href="https://developer.spotify.com/documentation/web-api/tutorials/refreshing-tokens">refresh the token</a>, so the user doesn't need to log in again.</p>
 
         </section>
         <section class="card">
