--- a/design/playlists.html
+++ b/design/playlists.html
@@ -31,6 +31,13 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+
+    <button id="profile-button" class="primary" type="button">Get User Profile</button>
+            <p>Your user profile is: <code id="profile-name" class="graybg"></code></p>
+            <img id="profile-image" src="https://placehold.co/300x300" alt="User profile">
+
+
+    <script src="../scripts/spotify.js"></script>
+    <script src="../scripts/tutorial.js"></script>
 </body>
 </html>
