--- a/design/login.html
+++ b/design/login.html
@@ -10,10 +10,13 @@
     <header>
         <h1>Spotify API Tutorial</h1>
         <nav>
-            <a href="index.html" class="selected">Walkthrough</a>
-            <a href="demo/index.html">Demo</a>
-            <a href="https://developer.spotify.com/documentation/web-api/">API Reference</a>
-        </nav>
+          <a href="index.html">Home</a>
+          <a href="generator.html">Generator</a>
+          <a href="playlists.html">Playlists</a>
+          <a href="stats.html">Stats</a>
+          <a href="help.html">Help</a>
+          <a href="login.html"  class="selected" id="loginButton">Login</a>
+      </nav>
     </header>
 
     <main>
