--- a/design/playlists.html
+++ b/design/playlists.html
@@ -37,7 +37,6 @@
             <img id="profile-image" src="https://placehold.co/300x300" alt="User profile">
 
 
-    <script src="../scripts/spotify.js"></script>
-    <script src="../scripts/tutorial.js"></script>
+    <script src="../scripts/playlists.js"></script>
 </body>
 </html>
