--- a/design/playlists.html
+++ b/design/playlists.html
@@ -16,6 +16,21 @@
         <a href="help.html">Help</a>
         <a href="login.html" id="loginButton">Login</a>
     </nav>
+
+    <h1>Display your Spotify profile data</h1>
+
+    <section id="profile">
+    <h2>Logged in as <span id="displayName"></span></h2>
+    <span id="avatar"></span>
+    <ul>
+        <li>User ID: <span id="id"></span></li>
+        <li>Email: <span id="email"></span></li>
+        <li>Spotify URI: <a id="uri" href="#"></a></li>
+        <li>Link: <a id="url" href="#"></a></li>
+        <li>Profile Image: <span id="imgUrl"></span></li>
+    </ul>
+    </section>
+
     
     <div class="playlist-container">
         <div class="playlist">
