--- a/design/playlists.html
+++ b/design/playlists.html
@@ -17,10 +17,10 @@
         <a href="login.html" id="loginButton">Login</a>
     </nav>
 
-    <h1>Display your Spotify profile data</h1>
+    <h1>Here is your Spotify Profile Data!</h1>
 
     <section id="profile">
-    <h2>Logged in as <span id="displayName"></span></h2>
+    <h2>Logged in as: <span id="displayName"></span></h2>
     <span id="avatar"></span>
     <ul>
         <li>User ID: <span id="id"></span></li>
@@ -30,6 +30,9 @@
         <li>Profile Image: <span id="imgUrl"></span></li>
     </ul>
     </section>
+
+    <div class="spotify-button" id="get-top-tracks">Get Top Tracks</div>
+    <div class="spotify-button recommendations" id="getrecommendations" style="display: none">Get Recommendations</div>
 
     
     <div class="playlist-container">
