--- a/design/stats.html
+++ b/design/stats.html
@@ -11,8 +11,8 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="generator.html">Generator</a>
-        <a href="playlists.html" class="selected">Playlists</a>
-        <a href="stats.html">Stats</a>
+        <a href="stats.html" class="selected">Stats</a>
+        <a href="playlists.html">Playlists</a>
         <a href="help.html">Help</a>
         <a href="login.html" id="loginButton">Login</a>
     </nav>
