--- a/design/stats.html
+++ b/design/stats.html
@@ -31,8 +31,9 @@
     </ul>
     </section>
 
-    <div class="spotify-button" id="get-top-tracks">Get Top Tracks</div>
-    <div class="spotify-button recommendations" id="getrecommendations" style="display: none">Get Recommendations</div>
+    
+    <div class="spotify-button" id="get-top-tracks" type="button">Get Top Tracks</div>
+    <div class="spotify-button recommendations" id="getrecommendations" style="display: none" type="button">Get Recommendations</div>
 
 
 </body>
