--- a/design/stats.html
+++ b/design/stats.html
@@ -31,9 +31,8 @@
     </ul>
     </section>
 
-    
-    <div class="spotify-button" id="get-top-tracks" type="button">Get Top Tracks</div>
-    <div class="spotify-button recommendations" id="getrecommendations" style="display: none" type="button">Get Recommendations</div>
+    <button id="get-top-tracks" class="primary" type="button">Get Top Tracks</button>
+    <button id="getrecommendations" class="primary" type="button">Get Recs</button>
 
 
 </body>
